--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.a46066294p.magiccardsapi.MainActivity">
     <item
-        android:id="@+id/action_settings_refresh"
+        android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings_refresh"
-        app:showAsAction="always"
-        android:visible="true"
-        android:enabled="true"
-        android:checkable="false" />
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
 </menu>
