--- a/app/src/main/res/layout/lv_cards_row.xml
+++ b/app/src/main/res/layout/lv_cards_row.xml
@@ -16,67 +16,92 @@
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textAllCaps="true"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="146dp" />
+        android:textAlignment="viewEnd"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp" />
 
     <ImageView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imgUrl"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/guideline7"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline7"
+        android:layout_height="150dp" />
+
+
 
     <TextView
+        android:layout_height="wrap_content"
+        android:id="@+id/color"
+        app:layout_constraintTop_toBottomOf="@+id/rarity"
+        android:textAlignment="viewEnd"
         android:layout_width="0dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp" />
+
+    <TextView
         android:layout_height="wrap_content"
         android:id="@+id/rarity"
-        android:layout_marginTop="8dp"
+        android:textAlignment="viewEnd"
+        android:layout_width="0dp"
         app:layout_constraintTop_toBottomOf="@+id/type"
-        app:layout_constraintRight_toRightOf="@+id/type"
-        app:layout_constraintLeft_toLeftOf="@+id/type"
-        />
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/imgUrl"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp" />
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/type"
+        android:textAlignment="viewEnd"
         app:layout_constraintTop_toBottomOf="@+id/tvCardName"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="24dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.4"/>
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="0dp"
         android:id="@+id/text"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/guideline7"
-        app:layout_constraintTop_toBottomOf="@+id/rarity"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/color"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.45"
+        android:layout_height="0dp"
+        app:layout_constraintHorizontal_bias="0.56"
+        android:textAlignment="viewEnd" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline7"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.33854166"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="130dp" />
+        tools:layout_editor_absoluteX="195dp"
+        app:layout_constraintGuide_percent="0.5078125" />
 
 </android.support.constraint.ConstraintLayout>
