--- a/app/src/main/res/menu/menu_cards_fragment.xml
+++ b/app/src/main/res/menu/menu_cards_fragment.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        android:title="Refresh"
+        android:title="@string/action_refresh"
         app:showAsAction="never" />
 
     <item
@@ -15,3 +15,4 @@
         app:showAsAction="never" />
 
 </menu>
+
