--- a/app/src/main/res/layout/lv_cards_row.xml
+++ b/app/src/main/res/layout/lv_cards_row.xml
@@ -48,7 +48,8 @@
         android:layout_marginRight="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline7"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:layout_height="wrap_content"
@@ -61,7 +62,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:layout_width="0dp"
