--- a/app/src/main/res/xml/pref_filter.xml
+++ b/app/src/main/res/xml/pref_filter.xml
@@ -1,10 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <MultiSelectListPreference
+        android:summary="@array/color_cards"
         android:title="Multi select list preference"
-        android:defaultValue="@array/rarity_cards"
-        android:entries="@array/rarity_cards"
-        android:entryValues="@array/rarity_cards"
+        android:defaultValue="@array/color_cards"
+        android:entries="@array/color_cards"
+        android:entryValues="@array/color_cards"
         android:key="multi_select_list_filter" />
+
 </PreferenceScreen>
