--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -17,5 +17,9 @@
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="@string/pref_header_data_sync" />
 
+    <header
+        android:fragment="com.example.a46066294p.magiccardsapi.SettingsActivity$FilterPreferenceFragment"
+        android:title="@string/pref_header_filter" />
+
 
 </preference-headers>
