--- a/app/src/main/res/layout/lv_cards_row.xml
+++ b/app/src/main/res/layout/lv_cards_row.xml
@@ -1,109 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-
-    <TextView
-        android:layout_width="222dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCardName"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textAllCaps="true"
-        android:textAlignment="viewEnd"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="8dp" />
-
-    <ImageView
-        android:layout_width="0dp"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/imgUrl"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/guideline7"
-        android:layout_height="150dp" />
-
-
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:id="@+id/color"
-        app:layout_constraintTop_toBottomOf="@+id/rarity"
-        android:textAlignment="viewEnd"
-        android:layout_width="0dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp" />
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:id="@+id/rarity"
-        android:textAlignment="viewEnd"
-        android:layout_width="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/type"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/imgUrl"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp" />
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/type"
-        android:textAlignment="viewEnd"
-        app:layout_constraintTop_toBottomOf="@+id/tvCardName"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp" />
-
-    <TextView
-        android:layout_width="0dp"
-        android:id="@+id/text"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
-        app:layout_constraintTop_toBottomOf="@+id/color"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.45"
-        android:layout_height="0dp"
-        app:layout_constraintHorizontal_bias="0.56"
-        android:textAlignment="viewEnd" />
-
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline7"
+<layout>
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="195dp"
-        app:layout_constraintGuide_percent="0.5078125" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
-</android.support.constraint.ConstraintLayout>
+
+        <TextView
+            android:layout_width="222dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvCardName"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            android:textAllCaps="true"
+            android:textAlignment="viewEnd"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp" />
+
+        <ImageView
+            android:layout_width="0dp"
+            app:srcCompat="@mipmap/ic_launcher"
+            android:id="@+id/imgUrl"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/guideline7"
+            android:layout_height="150dp" />
+
+
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:id="@+id/color"
+            app:layout_constraintTop_toBottomOf="@+id/rarity"
+            android:textAlignment="viewEnd"
+            android:layout_width="0dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline7"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:id="@+id/rarity"
+            android:textAlignment="viewEnd"
+            android:layout_width="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/type"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/imgUrl"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/type"
+            android:textAlignment="viewEnd"
+            app:layout_constraintTop_toBottomOf="@+id/tvCardName"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline7"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:id="@+id/text"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline7"
+            app:layout_constraintTop_toBottomOf="@+id/color"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintVertical_bias="0.45"
+            android:layout_height="0dp"
+            app:layout_constraintHorizontal_bias="0.56"
+            android:textAlignment="viewEnd" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline7"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="195dp"
+            app:layout_constraintGuide_percent="0.5078125" />
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
