--- a/app/src/main/res/layout/lv_cards_row.xml
+++ b/app/src/main/res/layout/lv_cards_row.xml
@@ -32,7 +32,9 @@
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/guideline7"
-            android:layout_height="150dp" />
+            android:layout_height="150dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
 
 
@@ -77,24 +79,6 @@
             app:layout_constraintLeft_toLeftOf="@+id/guideline7"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:id="@+id/text"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline7"
-            app:layout_constraintTop_toBottomOf="@+id/color"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintVertical_bias="0.45"
-            android:layout_height="0dp"
-            app:layout_constraintHorizontal_bias="0.56"
-            android:textAlignment="viewEnd" />
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
